fix: remove hardcoded hosts/ports — tudo via env vars
Backend:
- SecurityConfig lê CORS_ALLOWED_ORIGINS do application.yml (suporta
  lista separada por vírgula para múltiplos domínios/portas)
- application.yml: cors.allowed-origins com fallback localhost:3000,6003
- Remove @CrossOrigin hardcodado dos 4 controllers (PostController,
  CommentController, UserController, LikeController) — SecurityConfig
  já governa CORS globalmente

docker-compose.yml:
- Credenciais do banco: POSTGRES_DB/USER/PASSWORD com defaults
- Portas do host: DB_HOST_PORT/BACKEND_HOST_PORT/FRONTEND_HOST_PORT
- CORS_ALLOWED_ORIGINS passado ao backend
- NEXT_PUBLIC_API_URL com default http://backend:8080

.env.example: documenta todas as variáveis com notas de uso local e Coolify
README: instruções de setup local (cp .env.example) e tabela de vars para Coolify

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>